classDiagram
    namespace ru_nsu_gaev {
        class Main {
            +main(String[] args)
        }

        class Pizzeria {
            -PizzeriaConfig config
            -SharedQueue~Order~ orderQueue
            -Storage storage
            -List~Thread~ bakerThreads
            -List~Thread~ courierThreads
            -List~Order~ interruptedOrders
            -AtomicInteger orderCounter
            -boolean acceptingOrders
            +Pizzeria(PizzeriaConfig config)
            +start()
            +placeOrder() Order
            +shutdown()
            +isAcceptingOrders() boolean
            +loadConfig(String path) PizzeriaConfig
        }
    }

    namespace ru_nsu_gaev_config {
        class PizzeriaConfig {
            -BakerConfig[] bakers
            -CourierConfig[] couriers
            -int storageCapacity
            -int workingTimeMs
            +getBakers() BakerConfig[]
            +getCouriers() CourierConfig[]
            +getStorageCapacity() int
            +getWorkingTimeMs() int
        }

    class BakerConfig {
            -int id
            -int cookingTimeMs
            +getId() int
            +getCookingTimeMs() int
        }

    class CourierConfig {
            -int id
            -int trunkCapacity
            -int deliveryTimeMs
            +getId() int
            +getTrunkCapacity() int
            +getDeliveryTimeMs() int
        }
    }

    namespace ru_nsu_gaev_model {
        class Order {
            -int id
            -OrderState state
            +Order(int id)
            +getId() int
            +getState() OrderState
            +setState(OrderState state)
            +toString() String
        }

        class OrderState {
            <<enumeration>>
            QUEUED
            COOKING
            COOKED
            IN_STORAGE
            DELIVERING
            DELIVERED
            -String description
            +getDescription() String
        }
    }

    namespace ru_nsu_gaev_staff {
        class Baker {
            -int id
            -int cookingTimeMs
            -SharedQueue~Order~ orderQueue
            -Storage storage
            -List~Order~ interruptedOrders
            +run()
            +getBakerId() int
            +getCookingTimeMs() int
        }

        class Courier {
            -int id
            -int trunkCapacity
            -int deliveryTimeMs
            -Storage storage
            -List~Order~ interruptedOrders
            +run()
            +getCourierId() int
            +getTrunkCapacity() int
            +getDeliveryTimeMs() int
        }
    }

    namespace ru_nsu_gaev_storage {
        class SharedQueue~T~ {
            -LinkedList~T~ queue
            -int capacity
            -boolean closed
            +put(T item) boolean
            +take() T
            +takeUpTo(int maxCount) List~T~
            +close()
            +isClosed() boolean
            +isClosedAndEmpty() boolean
            +size() int
            +drainAll() List~T~
        }

        class Storage {
            -SharedQueue~Order~ queue
            -int capacity
            +put(Order order) boolean
            +takeUpTo(int maxCount) List~Order~
            +close()
            +isClosedAndEmpty() boolean
            +isClosed() boolean
            +size() int
            +getCapacity() int
            +drainAll() List~Order~
        }
    }

    Main ..> Pizzeria : creates
    Main ..> PizzeriaConfig : loads
    Pizzeria --> PizzeriaConfig : uses
    Pizzeria *-- SharedQueue~Order~ : owns
    Pizzeria *-- Storage : owns
    Pizzeria ..> Baker : creates
    Pizzeria ..> Courier : creates
    PizzeriaConfig *-- BakerConfig : contains
    PizzeriaConfig *-- CourierConfig : contains
    Baker ..|> Runnable : implements
    Courier ..|> Runnable : implements
    Baker --> SharedQueue~Order~ : consumes
    Baker --> Storage : produces
    Courier --> Storage : consumes
    Storage *-- SharedQueue~Order~ : uses
    Order *-- OrderState : has
    SharedQueue~T~ ..> Order : stores

